tests/testcases/errors/BCE0022-7.boo
"""
BCE0022-7.boo(7,20): BCE0022: Cannot convert 'System.Int32' to 'System.String'.
BCE0022-7.boo(7,23): BCE0022: Cannot convert 'System.Int32' to 'System.String'.
BCE0022-7.boo(8,20): BCE0022: Cannot convert 'System.Int32' to 'System.String'.
BCE0022-7.boo(8,23): BCE0022: Cannot convert 'System.Int32' to 'System.String'.
"""
a = array(string, (1, 2))
a = array(string, [1, 2])
